compress RowHidden()/GetRowHeight() use in excel export (tdf#126326)

Change-Id: Idc6a704cfc820bbbb2b51eff8db8159c251ea9ab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131062
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>